tests/models/enum/named/u128/fail/min_length.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(min_length = 2)]
        u128
    ),
}
fn main() {}
